Added shadcn-ui, theme and fixed linting

--- a/.gitignore
+++ b/.gitignore
@@ -11,16 +11,19 @@
 
 # next.js
 /.next/
+/.swc/
 /out/
 
 # production
 /build
 dist/
+_static
 
 # misc
 .DS_Store
 *.pem
 .vscode
+.contentlayer
 
 # debug
 npm-debug.log*
@@ -32,6 +35,7 @@ yarn-error.log*
 .env
 .env.*
 .env*.*
+.env.*.*
 
 # vercel
 .vercel
