--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,10 @@
   "root": true,
   "extends": [
     "next/core-web-vitals",
-    "prettier",
     "plugin:@next/next/recommended",
-    "plugin:tailwindcss/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:tailwindcss/recommended",
+    "prettier"
   ],
   "plugins": [
     "tailwindcss",
@@ -15,7 +16,8 @@
     "@next/next/no-html-link-for-pages": "off",
     "react/jsx-key": "off",
     "tailwindcss/no-custom-classname": "off",
-    "tailwindcss/classnames-order": "error"
+    "tailwindcss/classnames-order": "error",
+    "prettier/prettier": "error"
   },
   "settings": {
     "tailwindcss": {
@@ -34,7 +36,13 @@
         "*.ts",
         "*.tsx"
       ],
-      "parser": "@typescript-eslint/parser"
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "ecmaFeatures": {
+          "jsx": true
+        },
+        "project": "./tsconfig.json"
+      }
     }
   ]
 }
