--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
   "name": "elieyammine.com",
-  "description": "Passionate Developer, Innovating with Code and Crypto",
+  "description": "Curious Coder, Crypto Fan.",
+  "homepage": "https://elieyammine.com",
   "version": "0.1.0",
-  "private": true,
-  "author": "Elie Yammine",
+  "author": {
+    "name": "Elie Yammine",
+    "url": "https://elieyammine.com"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export",
-    "lint": "next lint"
+    "preview": "next build && next start",
+    "export": "next build && next export -o _static",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,mdx}\" --cache",
+    "format:write": "prettier --write \"**/*.{js,jsx,ts,tsx,mdx}\" --cache",
+    "typecheck": "tsc --noEmit",
+    "clear-all": "rm -rf .next .swc _static out dist build node_modules"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tabler/icons-react": "^3.5.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -31,6 +44,7 @@
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
