--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "name": "Elie Yammine",
     "url": "https://elieyammine.com"
   },
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,14 +16,18 @@
     "export": "next build && next export -o _static",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,mdx}\" --cache",
-    "format:write": "prettier --write \"**/*.{js,jsx,ts,tsx,mdx}\" --cache",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,mdx,mjs}\" --cache",
+    "format:write": "prettier --write \"**/*.{js,jsx,ts,tsx,mdx,mjs}\" --cache",
     "typecheck": "tsc --noEmit",
     "clear-all": "rm -rf .next .swc _static out dist build node_modules"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-three/drei": "^9.105.6",
@@ -39,6 +44,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-resizable-panels": "^2.0.19",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.164.1",
